--- a/xrpl-sms-backend/xrpl-sms-backend/xrpl-sms-backend/xrpl-sms-backend/package.json
+++ b/xrpl-sms-backend/xrpl-sms-backend/xrpl-sms-backend/xrpl-sms-backend/package.json
@@ -1,31 +1,27 @@
 {
   "name": "xrpl-sms-backend",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "SMS payment system for XRPL",
+  "main": "dist/server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "packageManager": "pnpm@10.24.0",
-  "dependencies": {
-    "dotenv": "^17.2.3",
-    "express": "^5.1.0",
-    "twilio": "^5.10.6",
-    "xrpl": "^4.4.3"
-  },
-  "devDependencies": {
-    "@types/express": "^5.0.5",
-    "@types/node": "^24.10.1",
-    "nodemon": "^3.1.11",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.9.3"
-{
-  "scripts": {
-    "dev": "nodemon src/server.ts",
+    "dev": "nodemon --exec ts-node src/server.ts",
     "start": "ts-node src/server.ts",
     "build": "tsc"
+  },
+  "keywords": ["xrpl", "sms", "payment"],
+  "author": "",
+  "license": "MIT",
+  "dependencies": {
+    "express": "^4.18.2",
+    "twilio": "^4.19.0",
+    "xrpl": "^3.0.0",
+    "dotenv": "^16.3.1"
+  },
+  "devDependencies": {
+    "typescript": "^5.3.3",
+    "@types/node": "^20.10.5",
+    "@types/express": "^4.17.21",
+    "ts-node": "^10.9.2",
+    "nodemon": "^3.0.2"
   }
 }
