--- a/mobile-app/package.json
+++ b/mobile-app/package.json
@@ -24,6 +24,8 @@
     "expo-barcode-scanner": "^13.0.1",
     "expo-camera": "~17.0.9",
     "expo-linear-gradient": "~15.0.7",
+    "react-native-get-random-values": "^1.11.0",
+    "buffer": "^6.0.3",
     "expo-status-bar": "~3.0.8",
     "react": "19.1.0",
     "react-dom": "19.1.0",
