--- a/mobile-app/package.json
+++ b/mobile-app/package.json
@@ -20,6 +20,10 @@
     "@react-navigation/native": "^7.1.22",
     "@react-navigation/stack": "^7.6.8",
     "buffer": "^6.0.3",
+    "stream-browserify": "^3.0.0",
+    "events": "^3.3.0",
+    "process": "^0.11.10",
+    "util": "^0.12.5",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "events": "^3.3.0",
