--- a/mobile-app/package.json
+++ b/mobile-app/package.json
@@ -26,9 +26,8 @@
     "expo": "~54.0.25",
     "expo-barcode-scanner": "^13.0.1",
     "expo-camera": "~17.0.9",
+    "expo-clipboard": "~8.0.7",
     "expo-linear-gradient": "~15.0.7",
-    "react-native-get-random-values": "^1.11.0",
-    "buffer": "^6.0.3",
     "expo-status-bar": "~3.0.8",
     "express": "^4.18.2",
     "process": "^0.11.10",
