--- a/mobile-app/package.json
+++ b/mobile-app/package.json
@@ -37,6 +37,7 @@
     "express": "^4.18.2",
     "process": "^0.11.10",
     "react": "19.1.0",
+    "react-native-ble-plx": "^2.0.3",
     "react-dom": "19.1.0",
     "react-native": "0.81.5",
     "react-native-gesture-handler": "~2.28.0",
