--- a/mobile-app/package.json
+++ b/mobile-app/package.json
@@ -3,8 +3,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
+    "start": "expo start --tunnel",
+    "android": "expo start --android --tunnel",
     "ios": "expo start --ios",
     "web": "expo start --web",
     "oracle-server": "ts-node OracleServer/oracleServer.ts",
