--- a/mobile-app/package.json
+++ b/mobile-app/package.json
@@ -27,7 +27,9 @@
     "expo-barcode-scanner": "^13.0.1",
     "expo-camera": "~17.0.9",
     "expo-clipboard": "~8.0.7",
+    "expo-contacts": "~15.0.10",
     "expo-linear-gradient": "~15.0.7",
+    "expo-sms": "~14.0.7",
     "expo-status-bar": "~3.0.8",
     "express": "^4.18.2",
     "process": "^0.11.10",
