--- a/mobile-app/package.json
+++ b/mobile-app/package.json
@@ -30,6 +30,7 @@
     "expo-contacts": "~15.0.10",
     "expo-linear-gradient": "~15.0.7",
     "expo-sms": "~14.0.7",
+    "expo-sms-module": "^0.0.9",
     "expo-status-bar": "~3.0.8",
     "express": "^4.18.2",
     "process": "^0.11.10",
