--- a/mobile-app/package.json
+++ b/mobile-app/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "expo start --tunnel",
+    "start": "expo start",
     "android": "expo start --android --tunnel",
     "ios": "expo start --ios",
     "web": "expo start --web",
@@ -21,6 +21,7 @@
     "@react-navigation/stack": "^7.6.8",
     "buffer": "^6.0.3",
     "cors": "^2.8.5",
+    "crypto-js": "^4.2.0",
     "dotenv": "^17.2.3",
     "events": "^3.3.0",
     "expo": "~54.0.25",
@@ -37,6 +38,7 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-native": "0.81.5",
+    "react-native-crypto": "^2.2.1",
     "react-native-gesture-handler": "~2.28.0",
     "react-native-get-random-values": "^2.0.0",
     "react-native-qrcode-svg": "^6.3.20",
